# jni-share

./: .gitignore
Java JNI-通往Native的世界/: JNI-通往Native世界的桥梁.pptx  JNI分享要点.xmind  ~$JNI-通往Native世界的桥梁.pptx  绘图1.vsdx
Java JNI-通往Native的世界/demo/demo01/app/src/main/cpp/: native-lib.cpp
Java JNI-通往Native的世界/demo/demo02/app/: build.gradle
Java JNI-通往Native的世界/demo/demo02/app/src/main/: AndroidManifest.xml
Java JNI-通往Native的世界/demo/demo02/gradle/wrapper/: gradle-wrapper.properties
Java JNI-通往Native的世界/demo/demo03/app/: build.gradle
Java JNI-通往Native的世界/demo/demo03/app/src/main/: AndroidManifest.xml
Java JNI-通往Native的世界/demo/demo03/app/src/main/cpp/: native-lib.cpp
demo/demo01/app/: CMakeLists.txt  build.gradle
demo/demo01/app/src/main/res/layout/: activity_main.xml
demo/demo01/gradle/wrapper/: gradle-wrapper.properties
demo/demo02/app/src/main/cpp/: native-lib.cpp
demo/demo02/app/src/main/res/layout/: activity_main.xml
demo/demo02/gradle/wrapper/: gradle-wrapper.properties
demo/demo03/gradle/wrapper/: gradle-wrapper.properties
demo/demo04/java-demo/src/com/example/: HelloWorld.java
demo/demo04/native-demo/: CMakeLists.txt  main.cpp
demo/demo05/app/: build.gradle
demo/demo05/app/src/main/: AndroidManifest.xml
demo/demo05/app/src/main/cpp/: native-lib.cpp
demo/demo05/app/src/main/res/layout/: activity_main.xml
demo/demo05/app2/: build.gradle
demo/demo05/app2/src/main/: AndroidManifest.xml
demo/demo05/app2/src/main/cpp/: native-lib.cpp
demo/demo05/gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
